@@ -1,3 +1,9 @@
+2005-03-07  Esteban Sanchez  <steve-o@linups.org>
+
+	* src/buoh.c: MAX_SCALE and MIN_SCALE reduced.
+	- The zoom is applied when the comic is loading
+	- The memory leak was not really fixed on the other comic. Now it is.
+
 2005-03-04  Esteban Sanchez  <steve-o@linups.org>
 
 	* src/comic.c: Fixed a huge memory leak when loading the pixbuf.
